--- a/index.html
+++ b/index.html
@@ -6,12 +6,260 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootsrap 5 -->
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
     <!-- CSS-->
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>SAYNA - HTML5 CSS3 Exercice 3</title>
 </head>
 
-<body></body>
+<body>
+    <header>
+        <nav>
+            <div class="container d-flex justify-content-center justify-content-md-between">
+                <div class="d-none d-md-block">
+                    <a href="#">Home</a>
+                    <a href="#">Feature</a>
+                </div>
+                <img id="top-logo" class="logoBlanc" src="./assets/img/SAYNA_Horizontal_Blanc.png" alt="Logo SAYNA" />
+
+                <a class="d-none d-md-block" href="#">Get it Now</a>
+            </div>
+        </nav>
+
+        <div class="container text-white text-center">
+            <h1>Promote your <span class="fw-bold">New App!</span></h1>
+            <h2>NEW SOFTWARE IN THE APP STORE</h2>
+            <p>
+                Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper.
+            </p>
+            <a href="#" class="btn btn-primary">BUY NOW</a>
+        </div>
+        <div class="container">
+            <img class="d-block d-md-none mx-auto" src="./assets/img/ordinateur.png" alt="" />
+            <img class="d-none d-md-block mx-auto" src="./assets/img/image_600px_1.png" alt="" />
+        </div>
+    </header>
+    <div>
+        <nav class="container">
+            <ul class="nav justify-content-evenly">
+                <li class="nav-item">
+                    <a href="#"><img src="./assets/img/social_icon1.png" alt="Social icon: " /></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#"><img src="./assets/img/social_icon2.png" alt="Social icon: " /></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#"><img src="./assets/img/social_icon3.png" alt="Social icon: " /></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#"><img src="./assets/img/social_icon4.png" alt="Social icon: " /></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#"><img src="./assets/img/social_icon5.png" alt="Social icon: " /></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#"><img src="./assets/img/social_icon6.png" alt="Social icon: " /></a>
+                </li>
+                <li class="nav-item">
+                    <a href="#"><img src="./assets/img/social_icon7.png" alt="Social icon: " /></a>
+                </li>
+                <li class="nav-item not d-none d-md-block">
+                    <a href="#"><img src="./assets/img/social_icon8.png" alt="Social icon: " /></a>
+                </li>
+            </ul>
+            <h2 class="text-center">SOCIAL MEDIA OPTION</h2>
+        </nav>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2>Check Our <span class="fw-bold">NEW APP</span></h2>
+                <p>
+                    Aenean lacinia bibendum nulla sed consectetur. Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing
+                </p>
+            </div>
+        </div>
+    </div>
+    <div id="map">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="d-flex justify-content-center justify-content-md-start align-content-center">
+                        <img src="./assets/img/icon_28px_1.png" alt="icone" />
+                        <h3 class="m-0">Awesomeness</h3>
+                    </div>
+                    <p class="text-center text-md-start">
+                        Aenean lacinia bibendum nulla sed consectetur.
+                    </p>
+                    <div class="d-flex justify-content-center justify-content-md-start align-content-center">
+                        <img src="./assets/img/icon_28px_2.png" alt="icone" />
+                        <h3 class="m-0">Pro Concept</h3>
+                    </div>
+                    <p class="text-center text-md-start">
+                        Aenean lacinia bibendum nulla sed consectetur.
+                    </p>
+                    <div class="d-flex justify-content-center justify-content-md-start align-content-center">
+                        <img style="width: 28px" src="./assets/img/cafe.png" alt="icone" />
+                        <h3 class="m-0">Colourfull</h3>
+                    </div>
+                    <p class="text-center text-md-start">
+                        Aenean lacinia bibendum nulla sed consectetur.
+                    </p>
+                </div>
+                <div class="col-md-4 text-center phone">
+                    <img class="d-md-none" src="./assets/img/iphone.png" alt="Iphone SAYNA" />
+                    <img class="d-none d-md-inline play" src="./assets/img/logo.png" alt="Logo play">
+                </div>
+                <div class="col-md-4 right">
+                    <div class="d-flex justify-content-center justify-content-md-end align-content-start">
+                        <h3 class="m-0">Awesomeness</h3>
+                        <img src="./assets/img/icon_28px_4.png" alt="icone" />
+                    </div>
+                    <p class="text-center text-md-end">
+                        Aenean lacinia bibendum nulla sed consectetur.
+                    </p>
+                    <div class="d-flex justify-content-center justify-content-md-end align-content-start">
+                        <h3 class="m-0">Pro Concept</h3>
+                        <img src="./assets/img/icon_28px_5.png" alt="icone" />
+                    </div>
+                    <p class="text-center text-md-end">
+                        Aenean lacinia bibendum nulla sed consectetur.
+                    </p>
+                    <div class="d-flex justify-content-center justify-content-md-end align-content-start">
+                        <h3 class="m-0">Colourfull</h3>
+                        <img src="./assets/img/icon_28px_6.png" alt="icone" />
+                    </div>
+                    <p class="text-center text-md-end">
+                        Aenean lacinia bibendum nulla sed consectetur.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="container text-center">
+            <img src="./assets/img/avatar_91px_1.png" alt="Avatar d'un personne" />
+            <p>
+                Nullam quis risus eget urna mollis ornare vel eu leo. Nullam id dolor id nibh ultricies.
+            </p>
+            <p>- JOHN DO</p>
+        </div>
+    </div>
+
+    <div>
+        <div class="container">
+            <div class="row text-center text-md-start">
+                <figure class="col-md-4 p-0">
+                    <img src="./assets/img/image_185px_1.jpg" alt="Capture d'écran 1" />
+                    <figcaption class="text-center text-md-start fw-bold">Screenshot 1</figcaption>
+                </figure>
+                <figure class="col-md-4 p-0">
+                    <img src="./assets/img/image_185px_2.jpg" alt="Capture d'écran 2" />
+                    <figcaption class="text-center text-md-start fw-bold">Screenshot 2</figcaption>
+                </figure>
+                <figure class="col-md-4 d-none d-md-block p-0">
+                    <img src="./assets/img/image_185px_3.jpg" alt="Capture d'écran 3" />
+                    <figcaption class="text-center text-md-start fw-bold">Screenshot 3</figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row text-center text-md-start">
+            <div class="col-md-6 composant ">
+                <img class="d-md-none" src="./assets/img/Composant_1_2.png" alt="Ordinateur avec logo SAYNA" />
+
+                <img class="d-none d-md-block" id="play2" src="./assets/img/logo.png" alt="Logo Play" />
+            </div>
+            <div class="col-md-6">
+                <h2>Limus <span class="fw-bold">Tested</span></h2>
+                <p>
+                    Aenean lacinia bibendum nulla sed consectetur. Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu leo quam.
+                </p>
+                <a href="#voir" class="btn btn-primary">See it here</a>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row text-center text-md-start">
+            <div class="col-md-6">
+                <h2>100% <span class="fw-bold"> Responsive </span></h2>
+                <p>
+                    Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras mattis consectetur purus sit amet fermentum. Nullam quis risus
+                    eget urna mollis ornare vel eu leo. Maecenas faucibus mollis interdum.
+                </p>
+                <a href="#" class="btn btn-primary">Visit Website</a>
+            </div>
+            <div class="col-md-6">
+                <img class="d-md-none" src="./assets/img/Layer_255.png " alt="Image d 'un iphone incliné" />
+                <img class="d-none d-md-block" src="./assets/img/image_300px_2.png" alt="Image d'un iphone incliné " />
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div>
+            <div class="container">
+                <div class="row text-center text-md-start">
+                    <div class="col-md-5">
+                        <img class="logo-footer" src="./assets/img/SAYNA_Horizontal_-_Noir.png" alt="Logo de SAYNA en NOIR" />
+                        <p>
+                            Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Nullam quis risus eget urna.
+                        </p>
+                    </div>
+                    <div class="col-md-2">
+                        <h3 class="text-center text-md-start">INFO</h3>
+                        <nav>
+                            <ul class="text-center text-md-start">
+                                <li>
+                                    <a href="#">Website</a>
+                                </li>
+                                <li>
+                                    <a href="#">Feature</a>
+                                </li>
+                                <li>
+                                    <a href="#">Appstore</a>
+                                </li>
+                                <li>
+                                    <a href="#">Unsuscribe</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="col-md-5 text-center text-md-start">
+                        <h3>CONTACT</h3>
+
+                        <p>
+                            SAYNA SARL<br /> Buisiness Center 2ème étage à gauche Tanjombato<br /> 101 Antananarivo NIF: 5 002 997 537<br /> Stat: 85497 11 2018 010389<br /> Madagascar
+                            <br />
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-center">
+                    <p>© Copyright Sayna 2016 - All Right Reserved</p>
+                </div>
+                <nav class=" col-md-6 ">
+                    <ul class="nav justify-content-evenly ">
+                        <li class="nav-item ">
+                            <a href="# "><img src="./assets/img/social_icon_19px_1.png " alt="Social icone " /></a>
+                        </li>
+                        <li class="nav-item ">
+                            <a href="# "><img src="./assets/img/social_icon_19px_2.png " alt="Social icone " /></a>
+                        </li>
+                        <li class="nav-item ">
+                            <a href="# "><img src="./assets/img/social_icon_19px_3.png " alt="Social icone " /></a>
+                        </li>
+                        <li class="nav-item ">
+                            <a href="# "><img src="./assets/img/social_icon_19px_4.png " alt="Social icone " /></a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </footer>
+</body>
 
 </html>
