🚀 AVANCEMENT: Ajout des fonds, couleurs, police, et ajustument pour le responsive.

--- a/index.html
+++ b/index.html
@@ -13,64 +13,75 @@
 </head>
 
 <body>
-    <header>
-        <nav>
+    <header class="bg-royalblue">
+        <nav class="py-4">
             <div class="container d-flex justify-content-center justify-content-md-between">
                 <div class="d-none d-md-block">
-                    <a href="#">Home</a>
-                    <a href="#">Feature</a>
+                    <a class="text-white text-decoration-none fw-bold px-4" href="#">Home</a
+            >
+            <a class="text-white text-decoration-none fw-bold px-4" href="#"
+              >Feature</a
+            >
+          </div>
+          <img
+            class="logoBlanc"
+            src="./assets/img/SAYNA_Horizontal_Blanc.png"
+            alt="Logo SAYNA"
+          />
+
+          <a class="d-none d-md-block fw-bold text-green px-4 font-ral" href="#"
+            >Get it Now</a
+          >
+        </div>
+      </nav>
+      <div class="sep"></div>
+
+      <div class="container text-white text-center py-4">
+        <h1 class="fw-normal ">Promote your <span class="fw-bold">New App!</span></h1>
+        <h2 class="text-green fs-5">NEW SOFTWARE IN THE APP STORE</h2>
+        <p>
+          Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+          Vestibulum id ligula porta felis euismod semper.
+        </p>
+        <a href="#" class="btn btn-primary width-25 mx-auto">BUY NOW</a>
                 </div>
-                <img id="top-logo" class="logoBlanc" src="./assets/img/SAYNA_Horizontal_Blanc.png" alt="Logo SAYNA" />
-
-                <a class="d-none d-md-block" href="#">Get it Now</a>
-            </div>
-        </nav>
-
-        <div class="container text-white text-center">
-            <h1>Promote your <span class="fw-bold">New App!</span></h1>
-            <h2>NEW SOFTWARE IN THE APP STORE</h2>
-            <p>
-                Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Vestibulum id ligula porta felis euismod semper.
-            </p>
-            <a href="#" class="btn btn-primary">BUY NOW</a>
-        </div>
-        <div class="container">
-            <img class="d-block d-md-none mx-auto" src="./assets/img/ordinateur.png" alt="" />
-            <img class="d-none d-md-block mx-auto" src="./assets/img/image_600px_1.png" alt="" />
-        </div>
+                <div class="container">
+                    <img class="d-block d-md-none mx-auto" src="./assets/img/ordinateur.png" alt="" />
+                    <img class="d-none d-md-block mx-auto" src="./assets/img/image_600px_1.png" alt="" />
+                </div>
     </header>
-    <div>
-        <nav class="container">
+    <div class="bg_gray">
+        <nav class="container py-5">
             <ul class="nav justify-content-evenly">
                 <li class="nav-item">
-                    <a href="#"><img src="./assets/img/social_icon1.png" alt="Social icon: " /></a>
+                    <a href="#"><img src="./assets/img/social_icon1.png" alt="Social icon:" /></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"><img src="./assets/img/social_icon2.png" alt="Social icon: " /></a>
+                    <a href="#"><img src="./assets/img/social_icon2.png" alt="Social icon:" /></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"><img src="./assets/img/social_icon3.png" alt="Social icon: " /></a>
+                    <a href="#"><img src="./assets/img/social_icon3.png" alt="Social icon:" /></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"><img src="./assets/img/social_icon4.png" alt="Social icon: " /></a>
+                    <a href="#"><img src="./assets/img/social_icon4.png" alt="Social icon:" /></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"><img src="./assets/img/social_icon5.png" alt="Social icon: " /></a>
+                    <a href="#"><img src="./assets/img/social_icon5.png" alt="Social icon:" /></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"><img src="./assets/img/social_icon6.png" alt="Social icon: " /></a>
+                    <a href="#"><img src="./assets/img/social_icon6.png" alt="Social icon:" /></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#"><img src="./assets/img/social_icon7.png" alt="Social icon: " /></a>
+                    <a href="#"><img src="./assets/img/social_icon7.png" alt="Social icon:" /></a>
                 </li>
                 <li class="nav-item not d-none d-md-block">
-                    <a href="#"><img src="./assets/img/social_icon8.png" alt="Social icon: " /></a>
+                    <a href="#"><img src="./assets/img/social_icon8.png" alt="Social icon:" /></a>
                 </li>
             </ul>
-            <h2 class="text-center">SOCIAL MEDIA OPTION</h2>
+            <h2 class="text-center pt-2 d-none d-md-block font-ral text-green fs-6">SOCIAL MEDIA OPTION</h2>
         </nav>
     </div>
-    <div class="container">
+    <div class="container py-5">
         <div class="row">
             <div class="col-12 text-center">
                 <h2>Check Our <span class="fw-bold">NEW APP</span></h2>
@@ -81,154 +92,165 @@
         </div>
     </div>
     <div id="map">
-        <div class="container">
+        <div class="container py-4">
             <div class="row">
-                <div class="col-md-4">
-                    <div class="d-flex justify-content-center justify-content-md-start align-content-center">
+                <div class="col-md-4 py-2 ">
+                    <div class="d-flex justify-content-center justify-content-md-start align-content-center fs-5">
                         <img src="./assets/img/icon_28px_1.png" alt="icone" />
-                        <h3 class="m-0">Awesomeness</h3>
+                        <h3 class="m-0 fs-5">Awesomeness</h3>
                     </div>
-                    <p class="text-center text-md-start">
+                    <p class="text-center text-md-start text-gray">
                         Aenean lacinia bibendum nulla sed consectetur.
                     </p>
                     <div class="d-flex justify-content-center justify-content-md-start align-content-center">
                         <img src="./assets/img/icon_28px_2.png" alt="icone" />
-                        <h3 class="m-0">Pro Concept</h3>
+                        <h3 class="m-0 fs-5">Pro Concept</h3>
                     </div>
-                    <p class="text-center text-md-start">
+                    <p class="text-center text-md-start text-gray">
                         Aenean lacinia bibendum nulla sed consectetur.
                     </p>
                     <div class="d-flex justify-content-center justify-content-md-start align-content-center">
                         <img style="width: 28px" src="./assets/img/cafe.png" alt="icone" />
-                        <h3 class="m-0">Colourfull</h3>
+                        <h3 class="m-0 fs-5">Colourfull</h3>
                     </div>
-                    <p class="text-center text-md-start">
+                    <p class="text-center text-md-start text-gray">
                         Aenean lacinia bibendum nulla sed consectetur.
                     </p>
                 </div>
-                <div class="col-md-4 text-center phone">
+                <div class="col-md-4 text-center phone py-2">
                     <img class="d-md-none" src="./assets/img/iphone.png" alt="Iphone SAYNA" />
-                    <img class="d-none d-md-inline play" src="./assets/img/logo.png" alt="Logo play">
+                    <img class="d-none d-md-inline play" src="./assets/img/logo.png" alt="Logo play" />
                 </div>
-                <div class="col-md-4 right">
+                <div class="col-md-4 right py-2">
                     <div class="d-flex justify-content-center justify-content-md-end align-content-start">
-                        <h3 class="m-0">Awesomeness</h3>
+                        <h3 class="m-0 fs-5">Awesomeness</h3>
                         <img src="./assets/img/icon_28px_4.png" alt="icone" />
                     </div>
-                    <p class="text-center text-md-end">
+                    <p class="text-center text-md-end text-gray">
                         Aenean lacinia bibendum nulla sed consectetur.
                     </p>
                     <div class="d-flex justify-content-center justify-content-md-end align-content-start">
-                        <h3 class="m-0">Pro Concept</h3>
+                        <h3 class="m-0 fs-5">Pro Concept</h3>
                         <img src="./assets/img/icon_28px_5.png" alt="icone" />
                     </div>
-                    <p class="text-center text-md-end">
+                    <p class="text-center text-md-end text-gray">
                         Aenean lacinia bibendum nulla sed consectetur.
                     </p>
                     <div class="d-flex justify-content-center justify-content-md-end align-content-start">
-                        <h3 class="m-0">Colourfull</h3>
+                        <h3 class="m-0 fs-5f">Colourfull</h3>
                         <img src="./assets/img/icon_28px_6.png" alt="icone" />
                     </div>
-                    <p class="text-center text-md-end">
+                    <p class="text-center text-md-end text-gray">
                         Aenean lacinia bibendum nulla sed consectetur.
                     </p>
                 </div>
             </div>
         </div>
     </div>
-    <div>
+    <div class="bg-royalblue py-4">
         <div class="container text-center">
             <img src="./assets/img/avatar_91px_1.png" alt="Avatar d'un personne" />
-            <p>
+            <p class="text-white">
                 Nullam quis risus eget urna mollis ornare vel eu leo. Nullam id dolor id nibh ultricies.
             </p>
-            <p>- JOHN DO</p>
+            <p class="text-green fw-bold">- JOHN DO</p>
         </div>
     </div>
 
-    <div>
-        <div class="container">
-            <div class="row text-center text-md-start">
+    <div class="bg_gray">
+        <div class="container py-4">
+            <div class="row">
+                <div class="col-12 text-center text-md-start">
+                    <h2 class="fw-normal">The best <span class="fw-bold">Screenshot</span></h2>
+                </div>
+            </div>
+            <div class="row text-center text-md-start d-md-flex justify-content-md-between ">
                 <figure class="col-md-4 p-0">
                     <img src="./assets/img/image_185px_1.jpg" alt="Capture d'écran 1" />
-                    <figcaption class="text-center text-md-start fw-bold">Screenshot 1</figcaption>
+                    <figcaption class="text-center text-md-start fw-bold py-2">
+                        Screenshot 1
+                    </figcaption>
                 </figure>
                 <figure class="col-md-4 p-0">
                     <img src="./assets/img/image_185px_2.jpg" alt="Capture d'écran 2" />
-                    <figcaption class="text-center text-md-start fw-bold">Screenshot 2</figcaption>
+                    <figcaption class="text-center text-md-start fw-bold py-2">
+                        Screenshot 2
+                    </figcaption>
                 </figure>
                 <figure class="col-md-4 d-none d-md-block p-0">
                     <img src="./assets/img/image_185px_3.jpg" alt="Capture d'écran 3" />
-                    <figcaption class="text-center text-md-start fw-bold">Screenshot 3</figcaption>
+                    <figcaption class="text-center text-md-start fw-bold py-2">
+                        Screenshot 3
+                    </figcaption>
                 </figure>
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container pt-4">
         <div class="row text-center text-md-start">
-            <div class="col-md-6 composant ">
+            <div class="col-md-6 composant">
                 <img class="d-md-none" src="./assets/img/Composant_1_2.png" alt="Ordinateur avec logo SAYNA" />
 
                 <img class="d-none d-md-block" id="play2" src="./assets/img/logo.png" alt="Logo Play" />
             </div>
-            <div class="col-md-6">
-                <h2>Limus <span class="fw-bold">Tested</span></h2>
-                <p>
+            <div class="col-md-6 pe-md-5">
+                <h2 class="fw-normal">Limus <span class="fw-bold">Tested</span></h2>
+                <p class="text-gray">
                     Aenean lacinia bibendum nulla sed consectetur. Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu leo quam.
                 </p>
-                <a href="#voir" class="btn btn-primary">See it here</a>
+                <a href="#voir" class="btn btn-primary width-50">See it here</a>
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container py-4">
         <div class="row text-center text-md-start">
-            <div class="col-md-6">
-                <h2>100% <span class="fw-bold"> Responsive </span></h2>
-                <p>
+            <div class="col-md-6 pe-md-5">
+                <h2 class="fw-normal">100% <span class="fw-bold"> Responsive </span></h2>
+                <p class="text-gray pr-md-5">
                     Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras mattis consectetur purus sit amet fermentum. Nullam quis risus
                     eget urna mollis ornare vel eu leo. Maecenas faucibus mollis interdum.
                 </p>
-                <a href="#" class="btn btn-primary">Visit Website</a>
+                <a href="#" class="btn btn-primary width-50">Visit Website</a>
             </div>
-            <div class="col-md-6">
-                <img class="d-md-none" src="./assets/img/Layer_255.png " alt="Image d 'un iphone incliné" />
-                <img class="d-none d-md-block" src="./assets/img/image_300px_2.png" alt="Image d'un iphone incliné " />
+            <div class="col-md-6 py-5 py-md-0">
+                <img class="d-md-none" src="./assets/img/Layer_255.png" alt="Image d 'un iphone incliné" />
+                <img class="d-none d-md-block" src="./assets/img/image_300px_2.png" alt="Image d'un iphone incliné" />
             </div>
         </div>
     </div>
     <footer>
-        <div>
+        <div class="bg_gray py-4">
             <div class="container">
                 <div class="row text-center text-md-start">
                     <div class="col-md-5">
                         <img class="logo-footer" src="./assets/img/SAYNA_Horizontal_-_Noir.png" alt="Logo de SAYNA en NOIR" />
-                        <p>
+                        <p class="text-gray">
                             Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Nullam quis risus eget urna.
                         </p>
                     </div>
                     <div class="col-md-2">
-                        <h3 class="text-center text-md-start">INFO</h3>
+                        <h3 class="text-center text-md-start fs-5 fw-bold">INFO</h3>
                         <nav>
                             <ul class="text-center text-md-start">
                                 <li>
-                                    <a href="#">Website</a>
+                                    <a class="text-gray" href="#">Website</a>
                                 </li>
                                 <li>
-                                    <a href="#">Feature</a>
+                                    <a class="text-gray" href="#">Feature</a>
                                 </li>
                                 <li>
-                                    <a href="#">Appstore</a>
+                                    <a class="text-gray" href="#">Appstore</a>
                                 </li>
                                 <li>
-                                    <a href="#">Unsuscribe</a>
+                                    <a class="text-gray" href="#">Unsuscribe</a>
                                 </li>
                             </ul>
                         </nav>
                     </div>
                     <div class="col-md-5 text-center text-md-start">
-                        <h3>CONTACT</h3>
+                        <h3 class="fs-5 fw-bold">CONTACT</h3>
 
-                        <p>
+                        <p class="text-gray">
                             SAYNA SARL<br /> Buisiness Center 2ème étage à gauche Tanjombato<br /> 101 Antananarivo NIF: 5 002 997 537<br /> Stat: 85497 11 2018 010389<br /> Madagascar
                             <br />
                         </p>
@@ -238,22 +260,22 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-6 text-center">
-                    <p>© Copyright Sayna 2016 - All Right Reserved</p>
+                <div class="col-md-6 text-center text-md-start">
+                    <p class="text-gray"> © Copyright Sayna 2016 - All Right Reserved</p>
                 </div>
-                <nav class=" col-md-6 ">
-                    <ul class="nav justify-content-evenly ">
-                        <li class="nav-item ">
-                            <a href="# "><img src="./assets/img/social_icon_19px_1.png " alt="Social icone " /></a>
+                <nav class="col-md-6">
+                    <ul class="nav justify-content-evenly">
+                        <li class="nav-item">
+                            <a href="#"><img src="./assets/img/social_icon_19px_1.png" alt="Social icone" /></a>
                         </li>
-                        <li class="nav-item ">
-                            <a href="# "><img src="./assets/img/social_icon_19px_2.png " alt="Social icone " /></a>
+                        <li class="nav-item">
+                            <a href="#"><img src="./assets/img/social_icon_19px_2.png" alt="Social icone" /></a>
                         </li>
-                        <li class="nav-item ">
-                            <a href="# "><img src="./assets/img/social_icon_19px_3.png " alt="Social icone " /></a>
+                        <li class="nav-item">
+                            <a href="#"><img src="./assets/img/social_icon_19px_3.png" alt="Social icone" /></a>
                         </li>
-                        <li class="nav-item ">
-                            <a href="# "><img src="./assets/img/social_icon_19px_4.png " alt="Social icone " /></a>
+                        <li class="nav-item">
+                            <a href="#"><img src="./assets/img/social_icon_19px_4.png" alt="Social icone" /></a>
                         </li>
                     </ul>
                 </nav>
